# tushare-a-share-local-backtest

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_POLICY.md  DISCLAIMER.md  README.md  SECURITY.md  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.base.json  开源发布检查清单.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/server/: README.md  eslint.config.mjs  package.json  tsconfig.json
apps/server/scripts/: typecheck.mjs
apps/server/src/: app.mjs  server.mjs  swagger.mjs
apps/server/src/config/: env.mjs  paths.mjs  server.mjs  workbench.mjs
apps/server/src/controller/: backtest.controller.mjs  database.controller.mjs  static.controller.mjs  (+2 more)
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/scripts/: browser-smoke.mjs
apps/web/src/: App.tsx  main.tsx
config/: backtest.fullsync.json  backtest_2023.json
scripts/: download_data.py  run_backtest.py  run_backtest_api.py  sqlite_admin.py  validate_data_completeness.py
shared/contracts/: package.json
shared/contracts/src/: database.ts  index.ts  workbench.ts
src/ppll_bt/: __init__.py  config.py
src/ppll_bt/backtest/: __init__.py  engine.py  models.py
src/ppll_bt/data/: __init__.py  repository.py  sync.py  tushare_client.py  validation.py
src/ppll_bt/strategy/: __init__.py  joinquant_migrated.py  minute_extension.py
test/: test_backtest_smoke.py  test_data_sync.py  test_data_validation.py  test_sqlite_repository.py
(+35 files in other folders)
