[project]
name = "ppll-bt"
version = "0.1.0"
description = "Tushare本地回测框架 - JoinQuant策略迁移版"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Peng" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "tushare>=1.4.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/gpboyer2/tushare-a-share-local-backtest"
Repository = "https://github.com/gpboyer2/tushare-a-share-local-backtest"
Issues = "https://github.com/gpboyer2/tushare-a-share-local-backtest/issues"

[tool.setuptools.packages.find]
where = ["src"]
